# docs/swagger.json
@@ -46,6 +46,20 @@
                 }
             }
         },
+        "/foo": {
+            "get": {
+                "description": "Foo",
+                "summary": "Foo",
+                "responses": {
+                    "200": {
+                        "description": "foo",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/ping": {
             "get": {
                 "description": "Ping the server.",
